--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,9 @@
       - Astronomy: "astronomy"
       - Photography: "photography"
       - Stamp Collection: "https://photos.app.goo.gl/TR82ChGjvV4rp3F16"
+    Wesbite Policy:
+      - Terms & Conditions: "Terms_Conditions"
+      - Privacy Policy: "privacy_policy"
 #  nav-search: "search"
     #Resume: "resume"
     #Shop: "https://dealecommerce.com"
