--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@
     email: "avi.karn6@gmail.com"
     facebook: avi.karn
     github: avinashkarn
-    twitter: DrAvinashKarn
+    twitter: AviKarnPhD
 # google-plus: +AnuditVerma
     linkedin: avikarnphd
   #stackoverflow: 4590331/anudit-verma
