--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@
       - ORCID profile: "https://orcid.org/0000-0001-9730-8922"
       - Publons Profile: "https://publons.com/researcher/1700487/avinash-karn/"
     Hobbies:
+      - Astronomy: 'astronomy"
       - Cooking: "foodblog"
-      - Astronomy: "astronomy"
       - Photography: "photography"
       - Stamp Collection: "https://photos.app.goo.gl/TR82ChGjvV4rp3F16"
     Wesbite Policy:
