--- a/_config.yml
+++ b/_config.yml
@@ -30,14 +30,12 @@
       - ResearchGate Profile: "https://www.researchgate.net/profile/Avinash_Karn"
       - ORCID profile: "https://orcid.org/0000-0001-9730-8922"
       - Publons Profile: "https://publons.com/researcher/1700487/avinash-karn/"
-    Hobbies:
-      - Astronomy: "astronomy"
-      - Cooking: "foodblog"
-      - Photography: "photography"
-      - Stamp Collection: "https://photos.app.goo.gl/TR82ChGjvV4rp3F16"
-    Wesbite Policy:
-      - Terms & Conditions: "Terms_Conditions"
-      - Privacy Policy: "privacy_policy"
+    Astronomy: "astronomy"
+    Cooking: "foodblog"
+    Photography: "photography"
+    Stamp Collection: "https://photos.app.goo.gl/TR82ChGjvV4rp3F16"
+    Terms & Conditions: "Terms_Conditions"
+    Privacy Policy: "privacy_policy"
 #  nav-search: "search"
     #Resume: "resume"
     #Shop: "https://dealecommerce.com"
