--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
   #baseurl: ""
 
 # Name of website
-  title: "Home"
-  description: "Personal website"
+  title: "Avi Karn"
+  description: "Avinash Karn personal website"
 
 #For my changes
 # use meta-title: for the center heading of the page.
@@ -145,7 +145,7 @@
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-  timezone: "America/New_York"
+  timezone: "America/Chicago"
   markdown: kramdown
   highlighter: rouge
   permalink: /:year-:month-:day-:title/
