--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
   #baseurl: ""
 
 # Name of website
-  title: "Avi Karn"
+  title: "Home"
   description: "Avinash Karn personal website"
 
 #For my changes
